fix(ui): remove touch-action style because it could cause horizontal scrolling issue

--- a/internal/ui/static/css/common.css
+++ b/internal/ui/static/css/common.css
@@ -1023,7 +1023,6 @@ article.category-has-unread {
     color: var(--entry-content-color);
     line-height: 1.4em;
     overflow-wrap: break-word;
-    touch-action: pan-y pinch-zoom;
 }
 
 .entry-content h1, h2, h3, h4, h5, h6 {
